<resources>
    <string name="app_name">دليل الطالب</string>
    <string name="login">تسجيل الدخول</string>
    <string name="email">بريدك الالكتروني</string>
    <string name="password">كلمة المرور</string>
    <string name="forget_password">نسيت كلمة المرور؟</string>
    <string name="don_t_have_account">ليس لدي حساب؟</string>
    <string name="create_account">إنشاء حساب</string>
    <string name="registration_success">" تم التسجيل بنجاح مبروك"</string>
    <string name="registration_failed">فشل التسجيل متررركز ي عم!</string>
    <string name="name">الاسم ثلاثي</string>
    <string name="phoon">رقم الهاتف</string>
    <string name="sginup">تسجيل حساب</string>
    <string name="university_id">الرقم الجامعي</string>
    <string name="required">مطلوب</string>
    <string name="empty">احد الحقول فاارغة</string>
    <string name="loading_wait">جار التحميل...</string>
    <string name="main">الرئيسية</string>
    <string name="ads">"الإعلانات "</string>
    <string name="my_question">استفساراتي</string>
    <string name="inquiry">استفسار</string>
    <string name="telegram">MostfaZwayed</string>
    <string name="who_us_info"> "\n" الطالب جمال الغول "\n" الطالب حمزة السويركي "\n"الطالب مصطفى زويد "\n\n" طلاب في كلية تكنولوجيا المعلومات قسم الحوسبة المتنقلة وتطبيقات الأجهزة الذكية .\n\n
  قمنا بإنشاء التطبيق لمساعدة الطلاب في المرحلة الجامعية من خلال الحصول على نماذج وتلخيصات وكتب المساقات والاستفسارات عن الأسئلة. </string>
    <string name="magles">مجلس الطلاب</string>
    <string name="hykalya">هيكلية المجلس</string>
    <string name="legan">لجان المجلس</string>
    <string name="alandya">"الأندية الطلابية "</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="magles_altlab">مجلس الطلاب - الجامعة الإسلامية</string>
    <string name="just_now">الان</string>
    <string name="minutes_ago"> دقيقة</string>
    <string name="hours_ago"> ساعات</string>
    <string name="days_ago">أيام مضت</string>
    <string name="weeks_ago">أسابيع مضت</string>
    <string name="more_month">أكثر من شهر</string>
    <string name="comments">تعليق</string>
    <string name="publish">جار النشر...</string>
    <string name="write_a_comment">أكتب تعليق...</string>
    <string name="majors">الأقسام</string>
    <string name="motatalbat">متطلبات الجامعة</string>
    <string name="contact_us">تواصل معنا</string>
    <string name="all_question">الاسألة الشائعة</string>
    <string name="who_us">من نحن</string>
    <string name="loading_login_wait">جاري تسجيل الدخول...</string>
    <string name="whats_think">بماذا تفكر?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string-array name="sppinner">
        <item> اختر الكلية </item>
        <!--
        <item>كلية أصول الدين</item>
        <item>كلية الشريعة والقانون</item>
        <item> كلية الآداب</item>
        <item>كلية التربية</item>
        <item>كلية الاقتصاد والعلوم الإدارية</item>
        <item>كلية التمريض</item>
        <item>كلية تكنولوجيا المعلومات </item>
        <item>كلية العلوم</item>
        <item>كلية الهندسة</item>
        <item>كلية الطب</item>
        <item>كلية علوم الصحة</item>-->
    </string-array>
</resources>