<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/iug_back"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layoutDirection="rtl"

    tools:context=".Fragment.Login">



    <ImageView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:scaleType="matrix"
        android:src="@drawable/background_login"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"

        android:text="@string/login"
        android:textColor="#000"
        android:textSize="18sp"
        android:elevation="2dp"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/textView3" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginTop="7dp"
        android:background="#5D9FFF"
        android:elevation="2dp"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/textEmailAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="8dp"
        android:drawableRight="@drawable/ic_group_27"
        android:gravity="right"
        android:drawablePadding="4dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="8dp"
        android:textColorHint="#707070"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/textView3"

        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <EditText
        android:id="@+id/textPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:drawableRight="@drawable/ic_password"
        android:ems="10"
        android:gravity="right"
        android:hint="@string/password"
        android:drawablePadding="4dp"

        android:inputType="numberPassword"
        android:padding="8dp"
        android:textColorHint="#707070"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/textEmailAddress"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/textEmailAddress" />

    <TextView
        android:id="@+id/forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_password"
        android:layout_marginTop="4dp"
        android:layout_marginRight="8dp"
        android:elevation="12dp"
        android:textSize="12sp"
        app:layout_constraintRight_toRightOf="@+id/textPassword"
        app:layout_constraintTop_toBottomOf="@+id/textPassword" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/btn_sginup"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"

        android:textStyle="bold"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:text="@string/login"
        android:textColor="#fff"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="@+id/textPassword"
        app:layout_constraintStart_toStartOf="@+id/textPassword"
        app:layout_constraintTop_toBottomOf="@+id/forget_password" />

    <TextView
        android:id="@+id/donthave_account_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/don_t_have_account"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintRight_toRightOf="@+id/login_btn"
        app:layout_constraintTop_toBottomOf="@+id/login_btn" />

    <TextView
        android:id="@+id/signUp_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:textColor="@color/primary"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/donthave_account_txt"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toLeftOf="@+id/donthave_account_txt"
        app:layout_constraintTop_toTopOf="@+id/donthave_account_txt" />
</androidx.constraintlayout.widget.ConstraintLayout>