<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
  android:background="@drawable/iug_back"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/iug_back"
        android:layoutDirection="rtl"
        tools:context=".Fragment.SignupFragment">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/background_login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="16dp"

                    android:elevation="3dp"
                    android:text="@string/sginup"
                    android:textColor="#000"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/view"
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:layout_marginTop="7dp"
                    android:background="#5D9FFF"
                    android:elevation="4dp"
                    app:layout_constraintEnd_toEndOf="@+id/textView"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/textView"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/image_view_profile_person"
                    android:layout_width="115dp"
                    android:layout_height="115dp"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/ic_baseline_person_24"

                    app:civ_border_color="#949890"
                    app:civ_border_width="1dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView"
                    />

                <Spinner
                    android:id="@+id/college"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="16dp"
                    android:entries="@array/sppinner"
                    android:gravity="right"
android:theme="@style/SpinnerStyle"
                    android:paddingRight="19dp"
android:background="@drawable/spinner"
                    android:textSize="16sp"

                    app:layout_constraintEnd_toEndOf="@id/password"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@id/password"
                    app:layout_constraintTop_toBottomOf="@id/password" />

                <EditText
                    android:id="@+id/phoone"
                    android:layout_width="0dp"
                    android:layout_height="44dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/background_sginup"
                    android:drawableStart="@drawable/ic_phone"
                    android:drawablePadding="8dp"
                    android:gravity="right"
                    android:hint="@string/phoon"
                    android:inputType="numberDecimal"
                    android:paddingLeft="16dp"

                    android:paddingTop="8dp"
                    android:paddingRight="20dp"
                    android:paddingBottom="8dp"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="@id/name"
                    app:layout_constraintStart_toStartOf="@id/name"
                    app:layout_constraintTop_toBottomOf="@id/name" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="0dp"
                    android:layout_height="44dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/background_sginup"
                    android:drawableStart="@drawable/email_signup"
                    android:drawablePadding="8dp"
                    android:gravity="right"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="16dp"
                    android:paddingTop="8dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="8dp"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="@id/phoone"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@id/phoone"
                    app:layout_constraintTop_toBottomOf="@id/phoone" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="0dp"
                    android:layout_height="44dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/background_sginup"
                    android:drawableStart="@drawable/ic_password_signup"
                    android:drawablePadding="8dp"
                    android:gravity="right"
                    android:hint="@string/password"
                    android:inputType="numberPassword"
                    android:paddingLeft="16dp"
                    android:paddingTop="8dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="8dp"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="@id/email"
                    app:layout_constraintStart_toStartOf="@id/email"
                    app:layout_constraintTop_toBottomOf="@id/email" />

                <EditText
                    android:id="@+id/name"
                    android:layout_width="0dp"
                    android:layout_height="44dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="16dp"
                    android:background="@drawable/background_sginup"
                    android:drawableStart="@drawable/ic_group_92"

                    android:drawablePadding="8dp"
                    android:hint="@string/name"
                    android:inputType="textPersonName"
                    android:paddingLeft="16dp"
                    android:paddingTop="8dp"
                    android:paddingRight="20dp"
                    android:paddingBottom="8dp"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/image_view_profile_person" />

                <EditText
                    android:id="@+id/university_id"
                    android:layout_width="0dp"
                    android:layout_height="44dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/background_sginup"
                    android:drawableRight="@drawable/ic_id"
                    android:drawablePadding="8dp"
                    android:gravity="right"
                    android:hint="@string/university_id"
                    android:inputType="number"
                    android:paddingLeft="16dp"
                    android:paddingTop="8dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="8dp"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="@id/college"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@id/college"
                    app:layout_constraintTop_toBottomOf="@id/college" />

                <Button
                    android:id="@+id/sginUp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="22dp"
                    android:layout_marginBottom="32dp"
                    android:background="@drawable/btn_sginup"
                    android:padding="16dp"
                    android:text="@string/sginup"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/university_id"
                    app:layout_constraintStart_toStartOf="@+id/university_id"
                    app:layout_constraintTop_toBottomOf="@+id/university_id" />

                <ImageView
                    android:id="@+id/imageView10"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="4dp"

                    android:background="@drawable/back_add_photo2"
                    android:padding="9dp"
                    android:src="@drawable/ic_baseline_add_a_photo_24"
                    app:layout_constraintBottom_toBottomOf="@+id/image_view_profile_person"
                    app:layout_constraintRight_toRightOf="@+id/image_view_profile_person" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

